[package]
name = "oxid_core"
version = "2020.1.0"
authors = ["Lorenzo Fontoura <lorenzo@nioel.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/rellfy/oxid"
repository = "https://github.com/rellfy/oxid"
description = "oxid rendering core"
exclude = ["examples"]
publish = false

[features]
default = []

[target.wasm32-unknown-unknown.dependencies]
oxid_wasm = { path = "../native/wasm" }

[dev-dependencies]
glam = {version = "0.8", features = ["scalar-math"] }
quad-rand = "0.1"
