[package]
name = "oxid"
version = "0.0.0"
authors = ["Lorenzo Fontoura <lorenzo@nioel.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/rellfy/oxid"
repository = "https://github.com/rellfy/oxid"
readme = "README.md"

[dependencies]
oxid_core = { path = "../core" }
oxid_framework = { path = "../framework" }
