[package]
name = "oxid_framework_macro"
version = "0.1.0"
authors = [
    "Lorenzo Fontoura <lorenzo@nioel.com>",
    "not-fl3 <not.fl3@gmail.com>"
]
edition = "2018"
license = "MIT"
homepage = "https://github.com/rellfy/oxid"
repository = "https://github.com/rellfy/oxid"
description = "oxid framework procedural macro"
publish = false

[lib]
proc-macro = true

[dependencies]
