[package]
name = "oxid_wasm"
version = "0.1.0"
authors = [
    "Lorenzo Fontoura <lorenzo@nioel.com>",
    "not-fl3 <not.fl3@gmail.com>"
]
edition = "2018"
license = "MIT"
description = "oxid WASM rendering module"
homepage = "https://github.com/rellfy/oxid"
repository = "https://github.com/rellfy/oxid"
publish = false
